tests/compile_fail/invalid_string_list_empty.rs
use surgeist_style::{FontFamilyList, Value};

fn main() {
    let _strings = Value::FontFamilyList(FontFamilyList(vec![String::new()]));
}
